fixing layout issue for search

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -175,7 +175,7 @@ footer nav.logged_in ul { width: 100%}
 	position: static !important;
 	margin-bottom: 15px;
 	font-size: 12px;
-	padding: 10px 0;
+	padding: 10px 0 !important;
 }
 
 nav#user {
